# KRAKENBOTZYN

./: .gitignore  .replit  ANTI_HALLUCINATION_DIAGNOSTIC.md  AUTOPILOT_RISK_INTEGRATION_REVIEW.md  CONCRETE_CHANGES_SUMMARY.txt  ENGINEERING_PROOF.md  FEATURES.md  FINAL_DELIVERY.md  README.md  RISK_MANAGEMENT_IMPLEMENTATION.md  UPGRADE_GUIDE.md  ZIN_DEBUG_ANALYSIS.md  ZYN_DEBUG_ANALYSIS.md  account_state.py  api.py  api_watchdog.py  autopilot.py  backtest_mode.py  bot.py  bracket_order_manager.py  candle_strategy.py  close_positions.py  commands.py  commands_addon.py  config.py  crypto_universe.py  daily_limits_state.json  data_logger.py  diagnostic.json  diagnostic_tools.py  discord_notifications.py  dust_prevention.py  emergency_flatten.py  evaluation_log.db  evaluation_log.py  event_manager.py  exchange_manager.py  execution_manager.py  fee_model.py  filter_analysis.py  (+68 more)
attached_assets/: Pasted--For-this-entire-conversation-you-are-NOT-allowed-to-guess-or-estimate-anything-For-every-answer--1763408429716_1763408429717.txt  Pasted--POST-IMPLEMENTATION-CHECK-IN-Replit-thank-you-for-exec_1764711049812.txt  Pasted--Question-1-Time-Mode-Universe-For-this-response-you-are-NOT-allowed-to-guess-Use-ONLY-yo-1763411938481_1763411938482.txt  Pasted--Refactor-Zyn-so-the-chat-replies-about-orders-trades-positions-are-100-driven-by-a-single-Status-S-1762971078757_1762971078757.txt  Pasted--What-is-the-exact-timestamp-of-the-last-log-line-befor_1764861636303.txt  Pasted--ZIN-STRATEGY-EXECUTION-OVERHAUL-PLAN-Replit-you-re-abo_1764710002179.txt  (+80 more)
