[project]
name = "kraken-trading-bot"
version = "0.1.0"
description = "Autonomous Kraken trading bot with manual command interface"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "pydantic>=2.12.4",
    "numpy>=2.3.4",
    "aiohttp>=3.13.2",
    "aiosmtplib>=5.0.0",
]
